--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,11 +1,5 @@
 /* 폰트 */
 @font-face {
-    font-family: 'KIMM_Bold';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2212@1.0/KIMM_Bold.woff2') format('woff2');
-    font-weight: 700;
-    font-style: normal;
-}
-@font-face {
     font-family: 'S-CoreDream-3Light';
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-3Light.woff') format('woff');
     font-weight: normal;
@@ -17,9 +11,16 @@
     font-weight: 400;
     font-style: normal;
 }
+@font-face {
+    font-family: 'PyeongChangPeace-Bold';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2206-02@1.0/PyeongChangPeace-Bold.woff2') format('woff2');
+    font-weight: 700;
+    font-style: normal;
+}
 /* 태그 디자인*/
 body {
-    background-color: rgba(5, 2, 34, 0.8);
+    background: url(/IMG/star.png) fixed -130%,
+    linear-gradient(rgb(19, 19, 90),80%, rgb(216, 213, 240)) no-repeat fixed 50% 50%/100% 100%;
     color: white;
     text-align: center;
     font-family: 'S-CoreDream-3Light';
@@ -31,12 +32,13 @@ h1 {
 
 /* id 디자인 */
 #clock {
-    font-family: 'KIMM_Bold';
-    text-shadow: 0 0 5px whitesmoke;
+    font-family: 'PyeongChangPeace-Bold';
     margin-top: 80px;
+    text-shadow: 0 0 5px whitesmoke;
 }
 #state {
     font-size: 20px;
+    text-shadow: 0 0 3px whitesmoke;
 }
 
 /* todolist 디자인 */
@@ -49,43 +51,78 @@ h1 {
     align-items: center;
     justify-content: space-between;
     margin: 10px 0;
-    background-color: rgba(255, 255, 255, 0.2);
+    background-color: rgba(164, 148, 255, 0.8);
     border-radius: 10px;
-    padding: 0 10px;
+    box-shadow: ;
+    padding: 2px 10px;
 }
 #todolist li:nth-child(2n){
-    background-color: rgb(231, 100, 100);
+    background-color: rgba(7, 7, 88, 0.9);
 }
+#todolist span{
+    width: 300px;
+    text-align: left;
+}
+
+/* checkbox 디자인 */
 #todolist input[type="checkbox"] {
+    /*checkboxhide*/appearance: none;
+    background-color: transparent;
     width: 1.2rem;
     height: 1.2rem;
     margin: 0.5rem 0.5rem;
+    color: whitesmoke;
+    border: 0.15em solid whitesmoke;
+    border-radius: 5px;
+    display: grid;
+    place-content: center;
     cursor: pointer;
-    text-align: center;
 }
+#todolist input[type="checkbox"]::before {
+    content: "";
+    width: 0.7rem;
+    height: 0.7rem;
+    transform: scale(0);
+    transition: 120ms transform ease-in-out;
+    background-color: white;
+    clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
+}
+#todolist input[type="checkbox"]:checked::before {
+    transform: scale(1);
+    transform-origin: bottom left;
+    clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
+}
+
+/* button */
 #todolist button {
+    float: right;
+    right: 0;
     transition: all 0.2s;
     border: 2px transparent solid;
     cursor: pointer;
     font-family: 'Pretendard-Regular';
-    text-align: center;
-    color: gray;
+    font-size: 0.8rem;
+    color: whitesmoke;
     background-color: transparent;
+    padding: 3px 7px;
 }
 /* 버튼 마우스 오버 */
 #todolist button:hover {
-    color: white;
+    border-radius: 50px 50px;
+    border: 2px solid whitesmoke;
     transition: all 0.2s;
 }
 
 
+
 /* input 디자인 */
 input[type="text"], input[type="submit"]{
+    color: rgba(6, 0, 63, 0.8);
     font-family: 'S-CoreDream-3Light';
     font-size: 1.1rem;
     background-color: transparent;
     border: 2px white solid;
-    padding: 7px 15px;
+    padding: 6px 15px;
     border-radius: 20px 20px;
 }
 input[type="text"]{
@@ -95,7 +132,8 @@ input[type="text"]{
 }
 input[type="text"]:focus{
     outline: none;
-    background-color: rgb(231, 100, 100);
+    background-color: rgb(216, 213, 240);
+    color: rgba(66, 40, 114);
 }
 input[type="text"]::placeholder{
     color: rgba(255,255,255,0.7);
@@ -105,14 +143,15 @@ input[type="submit"]{
 }
 input[type="text"]+input[type="submit"]{
     background-color: white;
-    padding: 5px 10px;
+    padding: 6px 12px;
     transition: all 0.3s;
 }
 /* 버튼에 마우스를 올렸을 때 */
 input[type="text"]+input[type="submit"]:hover {
     background-color: transparent;
-    color: white;
-    border: 2px solid white;
+    color:  rgb(216, 213, 240);
+    border: 2px solid  rgb(216, 213, 240);
+    cursor: pointer;
     transition: all 0.3s;
 }
 
